2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.h:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* MFStringURLWidget.h: 

2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* HistoryView.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* main.cpp:
	* X3DUserInterface.cpp:
	* MFStringURLWidget.h:
	* FileSaveDialog.xml:
	* ViewpointEditor.xml:
	* AppearanceEditor.xml:
	* NodePropertiesEditor.xml:
	* FileSaveDialog.cpp:
	* FileOpenDialog.cpp:
	* FileSaveWarningDialog.xml:
	* PrecisionPlacementPanel.xml:
	* FileImportDialog.cpp:
	* X3DAppearanceEditorInterface.h:
	* X3DAppearanceEditorInterface.cpp:
	* X3DNodePropertiesEditorInterface.h:
	* OpenLocationDialog.cpp:
	* X3DFileSaveWarningDialogInterface.h:
	* X3DNodePropertiesEditorInterface.cpp:
	* X3DFileSaveWarningDialogInterface.cpp:
	* X3DExportedNodesEditor.h:
	* X3DExportedNodesEditor.cpp:
	* FileSaveWarningDialog.cpp:
	* X3DUserDefinedFieldsEditor.h:
	* X3DUserDefinedFieldsEditor.cpp: 

2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* FileSaveWarningDialog.xml: 

2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* BrowserWindow.xml: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp:
	* CheckButton.x3dv: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWidget.cpp:
	* PrototypeInstanceDialog.xml:
	* PrototypeInstanceDialog.xml:
	* X3DPrototypeInstanceDialogInterface.h: 

2014-09-03  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp:
	* BrowserSelection.cpp: