@@ -1,5 +1,9 @@
 2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserWidget.cpp: 
+
+2014-09-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DUserInterface.h:
 	* X3DBrowserWidget.h:
 	* X3DBrowserEditor.h:
